src/objects/Base_Target__c.object
<CustomObject>
    <description>Base Targets store each Center location&apos;s revenue base target.   Base targets can be entered ahead of time; they will become effective when the effective date is reached, and prior versions for the same location will be superceded.</description>
    <fields>
        <fullName>Center_Location__c</fullName>
        <description>Identifies the Center to which the Base Target applies</description>
        <inlineHelpText>Which Center does this apply to?</inlineHelpText>
        <label>Center Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Chicago Deerfield/Northbrook</fullName>
                </value>
                <value>
                    <fullName>Chicago Naperville</fullName>
                </value>
                <value>
                    <fullName>Chicago All</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Dallas Fort Worth</fullName>
                </value>
                <value>
                    <fullName>Dallas All</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Denver Colorado Springs</fullName>
                </value>
                <value>
                    <fullName>Denver Glenwood Springs</fullName>
                </value>
                <value>
                    <fullName>Denver All</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Miami Fort Lauderdale</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Phoenix Mesa</fullName>
                </value>
                <value>
                    <fullName>Phoenix All</fullName>
                </value>
                <value>
                    <fullName>Portland</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>Salt Lake City</fullName>
                </value>
                <value>
                    <fullName>St. Louis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>When does this Base Target become effective?</description>
        <inlineHelpText>When does this target become effective?  (Can be set in advance of becoming effective.)</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Amount__c</fullName>
        <description>Target amount represents the revenue goal for each Center location.</description>
        <label>Target Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Base Target</label>
    <listViews>
        <fullName>All_Base_Targets</fullName>
        <columns>NAME</columns>
        <columns>Center_Location__c</columns>
        <columns>Target_Amount__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </filters>
        <label>All Base Targets</label>
    </listViews>
    <listViews>
        <fullName>All_Base_Targets_Effective_this_Qtr</fullName>
        <columns>NAME</columns>
        <columns>Center_Location__c</columns>
        <columns>Target_Amount__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </filters>
        <label>All Base Targets Effective this Qtr</label>
    </listViews>
    <nameField>
        <displayFormat>BT-{000}</displayFormat>
        <label>BT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Base Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>